<resources>
    <string name="app_name">P9 Inventory-BookStore -part2</string>
    <string name="add_new_book">Add new book</string>
    <string name="enter_the_book_name">Enter the book name</string>
    <string name="enter_the_price_for_book">Enter the price for book</string>
    <string name="enter_the_quantity_for_book">Enter quantity for books</string>
    <string name="enter_the_publisherHouse_name">Enter the publisher house name</string>
    <string name="enter_the_publisherHouse_phone_number">Enter the publisher house phone number</string>
    <string name="save">SAVE</string>
    <string name="empty_field_error">This field cannot be empty! Enter a value, please!</string>
    <string name="cannot_be_empty">field cannot be empty!</string>
    <string name="phone_number_error">This field must have 10 digits!</string>
    <string name="save_error">Error with saving book</string>
    <string name="added_msg">Book successfully added!</string>
    <string name="row_id">saved with row id:</string>

    <string name="edit_the_book">Edit the selected book</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="order">order</string>
    <string name="empty_database_image">Empty database image</string>
    <string name="the_database_is_empty">The book database is empty</string>
    <string name="please_add_a_new_entry">Please add a new entry! \n\nClick on the add(+) button,
        \n or click on the menu to a add new book!</string>
    <string name="name">Name: </string>
    <string name="price">Price: </string>
    <string name="quantity">Quantity: </string>
    <string name="sale">Sale</string>
    <string name="nothing_was_changed">No fields were modified</string>

    <string name="update_error">Error with updating the book</string>
    <string name="updated_msg">Book updated</string>
    <string name="blank" />
    <string name="discard_your_changes_msg">Discard your changes and quit editing</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep Editing</string>
    <string name="delete_msg">Delete this book entry?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="deleting_error_msg">Error with deleting book entry</string>
    <string name="device_deleted">Book deleted</string>
    <string name="publisher_name">Publisher name:</string>
    <string name="publisher_phone">Publisher phone:</string>
    <string name="delete_all_entries">Delete all entries</string>

</resources>
